syntax = "proto3";

option csharp_namespace = "NotificationGrpcService";

service NotificationService {
  rpc NotificationsGetSettings (NotificationClientIdRequest) returns (NotificationItemResponse);
  rpc NotificationsCreate (NotificationItem) returns (NotificationResponse);
  rpc NotificationsDelete (NotificationItemId) returns (NotificationResponse);  
  rpc NotificationsSetStatus (NotificationItemStatus) returns (NotificationResponse);
}

message NotificationItem {
	string id = 1;
    string client_id = 2;
    string is_enabled = 3;
    string timer_id = 4;
    string notification_time = 5;
    string monday_enabled =6;
    string tuesday_enabled = 7;
    string wednesday_enabled = 8;
    string thursday_enabled = 9;
    string friday_enabled = 10;
    string saturday_enabled = 11;
    string sunday_enabled = 12;
    string created_at = 13;
}

message NotificationItemStatus {
	string id = 1;
    string client_id = 2;
    string is_enabled = 3;
}

message NotificationItemId {
	string id = 1;
    string client_id = 2;
}

message NotificationClientIdRequest{
	string client_id = 1;
}

message NotificationResponse {
  bool success = 1;
  string message = 2;
}

message NotificationItemResponse {
  bool success = 1;
  string message = 2;
  repeated NotificationItem notification = 3;
}